added border-right padding to the menu on contacts page

--- a/contact.html
+++ b/contact.html
@@ -46,10 +46,12 @@
 		<section class="sidebar">
 			<div id="connect">
 				<h2>Connect with Me</h2>
-
-				<img src="assets/images/github-128.png" class="social" alt="Github">
-				<img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn">
-				<img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow">
+				<a href=https://github.com/ad5jo>
+				<img src="assets/images/github-128.png" class="social" alt="Github"></a>
+				<a href="https://www.linkedin.com/in/david-durkee-607b07a">
+				<img src="assets/images/linkedin-128.png" class="social" alt="LinkedIn"></a>
+				<a href="http://stackoverflow.com/users/4000925/dave-durkee">
+				<img src="assets/images/stackoverflow-128.png" class="social" alt="Stack Overflow"></a>
 			</div>
 		</section>
 	</div>
