--- a/portfolio.html
+++ b/portfolio.html
@@ -12,9 +12,11 @@
 		<div class="container">
 			<a href="index.html" id="logo">Dave Durkee</a>
 			<nav>
-				<a href="index.html">About</a>
-				<a href="portfolio.html">Portfolio</a>
-				<a href="contact.html">Contact</a>
+				<ul id="640_nav_bar">
+					<li><a href="index.html">About</a></li>
+					<li><a href="portfolio.html">Portfolio</a></li>
+					<li><a href="contact.html">Contact</a></li>
+				</ul>
 			</nav>
 		</div>
 	</header>
