--- a/portfolio.html
+++ b/portfolio.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=320, initial-scale=1">
 	<title>Portfolio | Dave Durkee</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<meta name="viewport">
 </head>
 <body>
 
